# syllab-iq

./: .gitignore  README.md  agent.py  ai.py  chunk_and_push.py  chunk_processing_stats.json  config.example.py  lib.py  main.py  note.ipynb  pipeline.py  pyproject.toml  references.txt  settings.py  test_docling.py  test_ingest.py  transformer.py
frontend/: dev.db  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/prisma/: schema.prisma  seed.js  seed.ts
frontend/prisma/migrations/20260330054432_add_chat_sessions/: migration.sql
frontend/prisma/migrations/20260613082926_phase1_auth/: migration.sql
frontend/prisma/migrations/20260613084255_phase2_rag/: migration.sql
frontend/prisma/migrations/20260613085341_phase2_improvements/: migration.sql
frontend/prisma/migrations/20260613090538_phase3_multimodal_revisions/: migration.sql
frontend/prisma/migrations/20260613091401_phase3_study_packs_and_concepts/: migration.sql
frontend/src/: middleware.ts
frontend/src/actions/: admin.ts  auth.ts  onboarding.ts  profile.ts  student.ts  teacher.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/onboarding/: OnboardingForm.tsx  page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: Navigation.tsx
frontend/src/components/auth/: UserAvatar.tsx
frontend/src/components/chat/: ChatContainer.tsx  ChatInput.tsx  MessageBubble.tsx  (+1 more)
frontend/src/hooks/: useChatSessions.ts  useChatStream.ts  useVoiceInput.ts
frontend/src/lib/: auth.ts  db.ts
markdowns/: cn.md  dsa.md  os.md
(+35 files in other folders)
